tests/auto/qml/qqmlcomponent/data/requiredGroup.bad.qml
import qt.test 1.0
RequiredGroup {
} // error: required group property is not set
